collective.dancing 0.2

  - Added functionality to show a preview in the browser
    [malthe]